# statx

./: .gitignore  README.md  pyproject.toml
src/statx/: __init__.py  __main__.py
src/statx/cli/: __init__.py
src/statx/stats/: __init__.py
tests/: test_integration.py  test_stats.py
