[project]
name = "statx"
version = "0.1.0"
description = "Statsmodels on the command line - a CLI for statistical analysis"
authors = [
    { name = "Henry Watkins", email = "h.watkins@ucl.ac.uk" }
]
dependencies = [
    "statsmodels>=0.14.4",
    "click>=8.1.8",
    "pandas>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"statx" = "statx.cli:statx"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/statx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
